--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -10,9 +10,9 @@
             </a>
             <% } %>
 
-                <a ngCloak ng-show="user" href="/course/create" class="top-menu-left">
+                <!--<a ngCloak ng-show="user" href="/course/create" class="top-menu-left">
                     <i class="ionicons ion-android-create"></i>   <b>Create Course</b>
-                </a>
+                </a>-->
 
         </div>
         <!-- Navbar Right Menu -->
