create course now is in the course list.

--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -21,6 +21,7 @@
     <link href="/d3/tree.css" rel="stylesheet" type="text/css" />
     <link href="/jquery/jsplumb.css" rel="stylesheet">-->
 
+    <link rel="stylesheet" type="text/css" href="/ng-tags-input/ng-tags-input.min.css">
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
