--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -11,7 +11,7 @@
 <script src="/angular/angular-route.min.js"></script>
 <script src="/angular/angular-resource.min.js"></script>
 <script src="/angular/angular-cookies.min.js"></script>
-<script src="/d3/d3.min.js"></script>
+<script src="/ng-tags-input/ng-tags-input.min.js"></script>
 <script src="/angular/courseMapper.js"></script>
 <!-- AdminLTE App -->
 <script src="/admin-lte/js/app.min.js" type="text/javascript"></script>
