can create course in category, and also add tags from here

--- a/views/admin-lte/catalogs/course.ejs
+++ b/views/admin-lte/catalogs/course.ejs
@@ -10,8 +10,7 @@
         <section class="content-header">
             <ol class="breadcrumb">
                 <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
-                <li><a href="/courses"> </i> Courses</a></li>
-                <li><a href="/<%=course.category.slug%>"> </i> <%=course.category.name%></a></li>
+                <li><a href="/courses/#/category/<%=course.category.slug%>"> </i> <%=course.category.name%></a></li>
                 <li class="active"><%=course.name%></li>
             </ol>
         </section>
