--- a/views/admin-lte/catalogs/newCourseModal.ejs
+++ b/views/admin-lte/catalogs/newCourseModal.ejs
@@ -58,7 +58,7 @@
 
                                 </div>
                             </div>
-{{course}}
+<!--{{course}}-->
                             <div class="control-group">
                                 <p class="help-block"></p>
 
