added module files for slideviewer

--- a/views/admin-lte/profile.ejs
+++ b/views/admin-lte/profile.ejs
@@ -39,7 +39,7 @@
                                             class="ionicons ion-android-apps"></i> Widgets Store</a></li>
                                     <% if(user.role == 'admin'){ %>
                                     <li><a href="/cm-admin/" title="admin"> Admin Panel</a></li>
-                                    <li><a href="#" title="Slider Mockup Preview"> Slides</a></li>
+                                    <li><a href="/apps/courseslider" title="Slider Mockup Preview"> Slides</a></li>
                                     <% }%>
                                 </ul>
                             </div>
