--- a/views/admin-lte/profile.ejs
+++ b/views/admin-lte/profile.ejs
@@ -55,12 +55,17 @@
                         </div>
                         <div class="grid-stack-item" data-gs-x="4" data-gs-y="0" data-gs-width="4" data-gs-no-resize="yes" data-gs-locked="yes">
                             <div class="grid-stack-item-content">
-                                <div ng-include src="'/widgets/chart'" onload="initWidgetButton()"></div>
+                                <div ng-include src="'/my-course/my-activity-summary'" onload="initWidgetButton()"></div>
                             </div>
                         </div>
                         <div class="grid-stack-item" data-gs-x="8" data-gs-y="0" data-gs-width="4" data-gs-no-resize="yes" data-gs-locked="yes">
                             <div class="grid-stack-item-content">
-                                <div ng-include src="'/widgets/pie'" onload="initWidgetButton()"></div>
+                                <div ng-include src="'/widgets/chart'" onload="initWidgetButton()"></div>
+                            </div>
+                        </div>
+                        <div class="grid-stack-item" data-gs-x="0" data-gs-y="1" data-gs-width="8" data-gs-no-resize="yes" data-gs-locked="yes">
+                            <div class="grid-stack-item-content">
+                                <div ng-include src="'/my-course/my-course-progress'" onload="initWidgetButton()"></div>
                             </div>
                         </div>
                     </div>
@@ -89,6 +94,10 @@
 <script src="/jquery/jquery-ui.min.js"></script>
 <script src="/gridstack/lodash.min.js"></script>
 <script src="/gridstack/gridstack.js"></script>
+<!--add sample analytics widgets js source-->
+<script src="/chartjs/Chart.min.js"></script>
+<script src="/chartjs/data.js"></script>
+<script src="/chartjs/options.js"></script>
 
 <script>
     $(function initiateDraggableGrid() {
