--- a/views/my-course/courseHistory.ejs
+++ b/views/my-course/courseHistory.ejs
@@ -1,7 +1,7 @@
 
 <div class="box">
     <div class="box-header with-border">
-        <h3 class="box-title">I am following these courses</h3>
+        <h3 class="box-title">My Course Activity  History</h3>
         <div class="box-tools pull-right">
             <button class="btn btn-box-tool" data-widget="refresh" data-toggle="tooltip" title="Refresh"><i class="fa fa-refresh"></i></button>
             <button class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse"><i class="fa fa-minus"></i></button>
@@ -9,21 +9,18 @@
         </div>
     </div>
     <div class="box-body">
-        <div style = "width:250px; height:250px">
-            <ul>
-            <li>
-                web tech c
-            </li>
-            <li>
-                web tech a
-            </li>
-            <li>
-                web tech b
-            </li>
-            </ul>
+        <div>
+            <canvas id="courseChart" width="500" height="250" style="margin-left: 40px; margin-right: auto;"></canvas>
         </div>
     </div>
     <div class="box-footer">
 
     </div>
 </div>
+
+<script>
+
+    var context = document.getElementById('courseChart').getContext('2d');
+    //var skillsChart = new Chart(context).Doughnut(pieData);
+    var myLineChart = new Chart(context).Line(lineData, lineChartOptions);
+</script>
