--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -1,26 +1,32 @@
-<div class="box">
-    <div class="box-header with-border">
-        <h3 class="box-title">I am following these courses</h3>
-        <div class="box-tools pull-right">
-            <button class="btn btn-box-tool" data-widget="refresh" data-toggle="tooltip" title="Refresh"><i class="fa fa-refresh"></i></button>
-            <button class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse"><i class="fa fa-minus"></i></button>
-            <button class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
-        </div>
-    </div>
-    <div class="box-body">
-        <ul>
-        <li>
-            web tech c
-        </li>
-        <li>
-            web tech a
-        </li>
-        <li>
-            web tech b
-        </li>
-        </ul>
-    </div>
-    <div class="box-footer">
+<% include header %>
+<div class="wrapper">
+    <!-- Header Navbar -->
+    <% include ../admin-lte/mainMenu %>
+
+    <!-- Content Wrapper. Contains page content -->
+    <div class="content-wrapper">
+
+        <section class="content-header">
+            <ol class ="breadcrumb">
+                <li><a href="/"><iclass="fa fa-home"></i> Home</a></li>
+                <li class ="active"> Slides ></li>
+            </ol>
+            <h1>
+                Slides
+            </h1>
+        </section>
+        <!-- Main content -->
+        <section class="content" ng-controller="widgetController">
+          <div class= "col-sm-12 col-md-12">
+              <div class= "debug slide-wrapper"></div>
+              <div class= "debug annotation-wrapper"></div>
+          </div>  
+        </section>
 
     </div>
-</div>
+</div><!-- ./wrapper -->
+<% include ../admin-lte/jsfooter %>
+
+<script src="/jquery/jquery-ui.min.js"></script>
+<script src="/gridstack/lodash.min.js"></script>
+<script src="/gridstack/gridstack.js"></script>
