--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -15,8 +15,65 @@
                 Slides
             </h1>
         </section>
+        <section class="content">
+          <div class="row">
+            <div class= "col-sm-12 col-md-12">
+              <div class="col-sm-8 col-md-8">
+                <div class="box">
+                  <div class="box-body with-border">
+                    <h3 class="">Slides</h3>
+                    <div class="pannel box box-primary">
+                      <div class= "slide-wrapper">
+                        test
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-4 col-md-4">
+                <div class="box">
+                  <div class="box-body with-border">
+                    <h3 class="">Comments</h3>
+                    <div class="pannel box box-primary">
+                      <div class= "annotation-wrapper">
+                        <form action='/slide-viewer' method="POST">
+                          <fieldset>
+                             <div class="control-group">
+                               <label for="rawText">rawText</label>
+                               <div class="controls">
+                                 <input type="text" class="form-control" id="rawText" name="rawText" placeholder="rawText">
+                               </div>
+                             </div>
+                             <div class="control-group">
+                               <label for="author">author</label>
+                               <div class="controls">
+                                 <input type="text" class="form-control" id="author" name="author" placeholder="author">
+                               </div>
+                             </div>
+                             <div class="control-group">
+                               <label for="originSlide">originSlide</label>
+                               <div class="controls">
+                                 <input type="number" class="form-control" id="originSlide" name="originSlide" placeholder="originSlide">
+                               </div>
+                             </div>
+                             <div class="control-group">
+                               <div class="controls">
+                                 <button type="submit" class="btn btn-default">Submit</button>
+                               </div>
+                             </div>
+                           </fieldset>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
         <!-- Main content -->
-        <section class="content" ng-controller="widgetController">
+        <!--<section class="content">
           <div class="row">
             <div class= "col-sm-12 col-md-12">
                 <div class="col-sm-8 col-md-8">
@@ -45,7 +102,7 @@
                 </div>
             </div>
           </div>
-        </section>
+        </section>-->
 
     </div>
 </div><!-- ./wrapper -->
