Added comment counting

--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -64,6 +64,7 @@
                              </div>
                            </fieldset>
                         </form>
+                        <button class="btn btn-default" id="displayComments" name="displayComments">Display Comments</button>
                       </div>
                     </div>
                   </div>
