--- a/public/slide-viewer/css/slideviewer.css
+++ b/public/slide-viewer/css/slideviewer.css
@@ -3,11 +3,10 @@
     border-color: #ff0000;
 }
 .slide-wrapper{
-  background-image: url('../images/slide.png');
   background-size: cover;
   background-repeat: no-repeat;
-  widht:100%;
-  height:100%;
+  width:100%;
+
 }
 .annotation-wrapper{
 
