drawing rect test

--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -26,6 +26,9 @@
                       <div class= "slide-wrapper">
                         <img src="images/slide.png" class="slide-wrapper" id="slideWrapper">
                         </img>
+                        <!--<object data="ressources/test.pdf" type="application/pdf" class="slide-wrapper">
+                            alt : <a href="test.pdf">test.pdf</a>
+                        </object>-->
 
                       </div>
                     </div>
