--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -23,8 +23,9 @@
                   <div class="box-body with-border">
                     <h3 class="">Slides</h3>
                     <div class="pannel box box-primary">
-                      <div class= "slide-wrapper">
-                        <img src="images/slide.png" class="slide-wrapper" id="slideWrapper">
+                      <div class= "slide-wrapper" id="slideWrapper">
+                        
+                        <img src="images/slide.png" class="slide-image" >
                         </img>
                         <!--<object data="ressources/test.pdf" type="application/pdf" class="slide-wrapper">
                             alt : <a href="test.pdf">test.pdf</a>
