--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -24,7 +24,7 @@
                     <h3 class="">Slides</h3>
                     <div class="pannel box box-primary">
                       <div class= "slide-wrapper" id="slideWrapper">
-                        
+
                         <img src="images/slide.png" class="slide-image" >
                         </img>
                         <!--<object data="ressources/test.pdf" type="application/pdf" class="slide-wrapper">
@@ -45,16 +45,16 @@
                       <div class= "annotation-wrapper">
                         <form action='/slide-viewer' method="POST">
                           <fieldset>
+                            <div class="control-group">
+                              <label for="author"><%=currentUser.username%></label>
+                              <div class="controls">
+                                <input type="text" class="form-control" id="author" name="author" placeholder="author" visibility="hidden"> <%=currentUser.username%> </input> 
+                              </div>
+                            </div>
                              <div class="control-group">
                                <label for="rawText">rawText</label>
                                <div class="controls">
                                  <input type="text" class="form-control" id="rawText" name="rawText" placeholder="rawText">
-                               </div>
-                             </div>
-                             <div class="control-group">
-                               <label for="author">author</label>
-                               <div class="controls">
-                                 <input type="text" class="form-control" id="author" name="author" placeholder="author">
                                </div>
                              </div>
                              <div class="control-group">
