refactor angular course controller s

--- a/views/admin-lte/catalogs/newCourseModal.ejs
+++ b/views/admin-lte/catalogs/newCourseModal.ejs
@@ -53,7 +53,7 @@
 
                                 <div class="controls">
                                     <tags-input ng-model="course.tags">
-                                        <auto-complete source="loadTags($query)"></auto-complete>
+                                        <!--<auto-complete source="loadTags($query)"></auto-complete>-->
                                     </tags-input>
 
                                 </div>
